--- a/index.html
+++ b/index.html
@@ -8,15 +8,36 @@
     <script src="https://kit.fontawesome.com/072e5df971.js" crossorigin="anonymous"></script>
     <title>Instagram</title>
 </head>
-<body>
-    <nav class="navbar navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <i class="fa-brands fa-instagram"></i>
-            <h1 class="d-inline-block fs-5">Instagram</h1>
-          </a>
-        </div>
+  <body>
+    <div class="d-flex w-100 justify-content-between">
+      <nav class="navbar navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <i class="fa-brands fa-instagram"></i>
+              <h1 class="d-inline-block fs-5">Instagram</h1>
+            </a>
+          </div>
       </nav>
-    
+      <div class="d-flex align-right justify-content-end">
+        <button type="button" class="btn btn-success me-2" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Create a new post
+        </button>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-gear"></i>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Accesibility</a></li>
+              <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
+              <li>
+                  <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item text-danger" href="#">Log out</a></li>
+          </ul>
+        </div>
+    </div>
 </body>
 </html>
