--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/072e5df971.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Instagram</title>
 </head>
   <body>
-    <div class="d-flex w-100 justify-content-between">
-      <nav class="navbar navbar-light">
-          <div class="container-fluid">
+      <nav class="navbar bg-light navbar-light py-3">
+        <div class="d-flex w-100 justify-content-between">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <i class="fa-brands fa-instagram"></i>
               <h1 class="d-inline-block fs-5">Instagram</h1>
             </a>
           </div>
-      </nav>
-      <div class="d-flex align-right justify-content-end">
-        <button type="button" class="btn btn-success me-2" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">
-                        Create a new post
-        </button>
-        <div class="dropdown">
+        <div class="d-flex  align-right justify-content-end">
+          <div class="green-button text-nowrap">
+            <button type="button" class="btn btn-success " data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Create a new post
+            </button>
+          </div>
+        </div>
+        <div class="dropdown mx-2">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
               data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-gear"></i>
+              <i class="fa-solid fa-cog"></i>
           </button>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -38,6 +40,109 @@
               <li><a class="dropdown-item text-danger" href="#">Log out</a></li>
           </ul>
         </div>
+      </nav>  
     </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Create a new post</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <h6>Caption:</h6>
+                  <textarea class="form-control" placeholder="Add the caption of your post here"
+                      id="floatingTextarea2"></textarea>
+                  <div class="row p-2">
+                      <button class="col-1 border rounded p-1 m-1 btn-light">
+                          <i class="fa-solid fa-camera"></i>
+                      </button>
+                      <button class="col-1 border rounded p-1 m-1 btn-light">
+                          <i class="fa-solid fa-location-dot"></i>
+                      </button>
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-success">Publish</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <div class="container-fluid p-2">
+    <ul class="nav nav-pill justify-content-center" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+                role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+                role="tab" aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"></i></a>
+        </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+        
+        <div class="tab-pane fade show active overflow-hidden" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="row">
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-1.2.1&w=1080&fit=max&q=80&fm=jpg&crop=entropy&cs=tinysrgb" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://c4.wallpaperflare.com/wallpaper/229/140/44/students-boys-girls-study-wallpaper-preview.jpg" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://wallpaperaccess.com/full/1149888.jpg" class="img-fluid w-100" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://c0.wallpaperflare.com/preview/28/977/291/smiling-woman-with-white-background.jpg" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://i.pinimg.com/originals/02/5c/ba/025cba8ce33ed90181ddc762e69141d5.jpg" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://i.pinimg.com/736x/af/03/e8/af03e8f301698efda8006b4da49ebf52.jpg" class="img-fluid w-100" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://wallpaperaccess.com/full/1447218.jpg" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://images7.alphacoders.com/122/1228014.png" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://epostalnews.com/wallpaper/wallpaper/20220827/diverse-college-students-smiling-together-during-class-australian-preview.webp" class="img-fluid w-100" alt=""></div>
+            </div>
+        </div>
+        
+        <div class="tab-pane fade overflow-hidden" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="row my-4">
+                <div class="col-6 mx-auto border rounded p-0">
+                    <div class="d-flex p-2">
+                        <div class="w-100 fs-4">My Crazy dog Spark!</div>
+                        <small class="align-bottom">08/26</small>
+                    </div>
+                    <img style="object-fit: cover;" src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-1.2.1&w=1080&fit=max&q=80&fm=jpg&crop=entropy&cs=tinysrgb" class="img-fluid w-100 col-12" alt=""/>
+                    <div class="p-2">
+                        <strong>204 Likes</strong>
+                        <p>This is an example of a very good photo that you can post on instagram</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row my-4">
+                <div class="col-6 mx-auto border rounded p-0">
+                    <div class="d-flex p-2">
+                        <div class="w-100 fs-4">The greatness of Croatia</div>
+                        <small>04/09</small>
+                    </div>
+                    <img style="object-fit: cover;" src="https://wallpaperaccess.com/full/1149888.jpg" class="img-fluid w-100 col-12" alt=""/>
+                    <div class="p-2">
+                        <strong>26985 Likes</strong>
+                        <p>This is an example of a very good photo that you can post on instagram</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row my-4">
+                <div class="col-6 mx-auto border rounded p-0">
+                    <div class="d-flex p-2">
+                        <div class="w-100 fs-4">Amazing GOAL by Cristiano!</div>
+                        <small>06/10</small>
+                    </div>
+                    <img style="object-fit: cover;" src="https://i.pinimg.com/736x/af/03/e8/af03e8f301698efda8006b4da49ebf52.jpg" class="img-fluid w-100 col-12" alt=""/>
+                    <div class="p-2">
+                        <strong>204 Likes</strong>
+                        <p>This is an example of a very good photo that you can post on instagram</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>  
 </body>
 </html>
