--- a/index.html
+++ b/index.html
@@ -73,16 +73,13 @@
   <div class="container-fluid p-2">
     <ul class="nav nav-pill justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
-                role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></a>
+            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
-                role="tab" aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"></i></a>
+            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"></i></a>
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-        
         <div class="tab-pane fade show active overflow-hidden" id="home" role="tabpanel" aria-labelledby="home-tab">
             <div class="row">
                 <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-1.2.1&w=1080&fit=max&q=80&fm=jpg&crop=entropy&cs=tinysrgb" class="img-fluid w-100" alt=""></div>
@@ -97,7 +94,7 @@
             <div class="row">
                 <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://wallpaperaccess.com/full/1447218.jpg" class="img-fluid w-100" alt=""></div>
                 <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://images7.alphacoders.com/122/1228014.png" class="img-fluid w-100" alt=""></div>
-                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://epostalnews.com/wallpaper/wallpaper/20220827/diverse-college-students-smiling-together-during-class-australian-preview.webp" class="img-fluid w-100" alt=""></div>
+                <div class="col-4 p-1"><img style="height: 30vw; object-fit: cover;" src="https://img.freepik.com/premium-photo/group-diverse-college-students-walking-talking-campus-they-are-all-smiling-laughing-look-happy-be-together_14117-65907.jpg" class="img-fluid w-100" alt=""></div>
             </div>
         </div>
         
